build out how computer thinks section

--- a/emoji-libs-port-temp.html
+++ b/emoji-libs-port-temp.html
@@ -177,7 +177,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
           </div>
         </div>
 
-        <div class="bullet bulletEngineer lightGreyBack">
+        <div class="bullet bulletEngineer ">
           <div class="emojiIdeaDiv emojiIdeaDivEngineer">
             <img class="emojiIdeaImg emojiIdeaImgEngineer" alt="Two Crossed Light Sabers" src="myimages/emoji/strategy/emoji-engineer.png">
           </div>
@@ -205,7 +205,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
           <div class="emojiText"><p><b>Competitor sites not too compelling</b><p>
             <p class= "emojiSubText">
-              At the time, there were very few sites available for anything to do with understanding the meaning of emojis
+            - At the time, there were very few sites available for anything to do with understanding the meaning of emojis
             </p>
             <p class= "emojiSubText">- There are still are no sites for mad-libs with emojis
             </p>
@@ -223,8 +223,10 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div class="compThreatLogosDiv">
   <div class="">
+<p class="statement emojiPink">Emoji Bible</p>
+
       <div class="compThreatLogosText">
-        <p class="compThreatLogoTitle emojiPink">Emoji Bible</p>
+        <!-- compThreatLogoTitle  -->
         <p class="compThreatLogoSubTitle">Offered essentially three multi-level, fully-functional websites:</p>
         <p class="compThreatLogoText">- Emoji-Libs/translator (a Mad Libs for emojis)</p>
         <p class="compThreatLogoText">- Express your feelings with Emojis</p>
@@ -252,8 +254,8 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 </div>
 
   <div class="">
+    <p class="statement emojiBlue">Emoji-Libs</p>
         <div class="compThreatLogosText compThreatLogosTextEmojiLibs">
-          <p class="compThreatLogoTitle emojiBlue">Emoji-Libs</p>
           <p class="compThreatLogoSubTitle">Offered one fully-functional website with three stories:</p>
           <p class="compThreatLogoText">- Dynamic site, uses multiple types of Java Script functions</p>
           <p class="compThreatLogoText">- Java Script and CSS animations </p>
@@ -327,7 +329,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </p>
 </div>
 
-<img class="tupperware" alt="Picture of Tupperware" src="myimages/emoji/research/tupperware-final.jpg">
+<img class="tupperware researchpics" alt="Picture of Tupperware" src="myimages/emoji/research/tupperware-final.jpg">
 
 <div><p class="statement emojiBlue">CSS is hard</p></div>
 
@@ -339,7 +341,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <img class="easyButton" alt="Easy Button" src="myimages/emoji/research/easy-button.png">
 
-<p class="emojiResearchBullet">Key items to note about css:</p>
+<!-- <p class="emojiResearchBullet">Key items to note about css:</p> -->
 
 <div class="emojiResearchBulletDiv">
   <div class="emojiResearchDiv">
@@ -391,9 +393,9 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </p>
 </div>
 
-<img class="sausage" alt="Sausage" src="myimages/emoji/research/sausage.jpg">
-
-<p class="emojiResearchBullet">Key items to note about Java Script:</p>
+<img class="sausage researchpics" alt="Sausage" src="myimages/emoji/research/sausage.jpg">
+<!--
+<p class="emojiResearchBullet">Key items to note about Java Script:</p> -->
 
 <div class="emojiResearchBulletDiv">
   <div class="emojiResearchDiv">
@@ -412,7 +414,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>Gives you a clue about the where if not also the why (sort of).</b> Java Script tells you the exact place where the error starts, the actual line. It also gives you a bit of information about what caused the error although it’s usually in computer speak like: something is &#34;null,&#34; &#34;undefined is not a function,&#34; or &#34;unexpected token ILLEGAL&#34; - am I going to coding jail?
+    <p><b>Gives you a clue about the where if not also the why (sort of).</b> Java Script tells you the exact place where the error starts, the actual line. It also gives you a bit of information about what caused the error although it&#39;s usually in computer speak like: something is &#34;null,&#34; &#34;undefined is not a function,&#34; or &#34;unexpected token ILLEGAL&#34; - am I going to coding jail?
  </p>
   </div>
 </div>
@@ -432,16 +434,191 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    <b>My new paradigm.</b> I recently attended a Ruby pairing workshop. I had exactly zero experience in Ruby. I asked my pair what was the difference between Ruby and Ruby on Rails. I will paraphrase his answer in the style of the SAT: Ruby is to Rails as Java Script is to jQuery. I had no experience with Ruby, but understood him completely. I know I have just cracked the surface, but any code learning going forward should be much easier for me given my new paradigm.
+    <b>My new paradigm.</b> I recently attended a Ruby pairing workshop. I had exactly zero experience in Ruby or any other back-end code for that matter. I asked my pair what was the difference between Ruby and Ruby on Rails. I will paraphrase his answer in the style of the SAT: Ruby is to Rails as Java Script is to jQuery. I had no experience with Ruby, but understood him completely. I know I have just cracked the surface, but any code learning going forward should be much easier for me given my new paradigm.
   </p>
 </div>
+
+<img class="researchpics bumperSticker" alt="Bumpersticker" src="myimages/emoji/research/bumper-sticker.jpg">
+
+<div><p class="statement emojiPink">Computers are stupid, but never wrong</p></div>
+
+<div class="thinkBigDiv">
+  <p class="thinkBigP">
+    I can almost hear the collective grown of designers when they get to this part. &#34;Oh no! No actual Code!&#34; I cut this bit of code out of my Emoji-Libs site to demontstrate how I understand that computers think. Designed by matheteticians, computers &#34;think&#34; in a way that is not very obvious to most of us. There is a commons phrase among coders &#34;computer are stupid, but never wrong.&#34; This is to say that you have to tell them  what you want in explicit detail in a lanaguage that only they understand to get the output you want.
+  </p>
+</div>
+
+<img class="researchpics" alt="Code" src="myimages/emoji/research/code.png">
+
+<div class="emojiResearchBulletDiv">
+  <div class="emojiResearchDiv">
+    <img class="emojiResearch" alt="Video Game Creature Emoji" src="myimages/emoji/research/video-game.png">
+  </div>
+
+  <div class="emojiReseachText">
+    <p><b>Line 1: function chooseNouns(nounEvent){</b></p>
+    <p>This is the start ot the function that allows you to choose a noun emoji from the list of options in the noun table.
+    </p>
+  </div>
+</div>
+
+<div class="emojiResearchBulletDiv">
+  <div class="emojiResearchDiv">
+    <img class="emojiResearch" alt="Video Game Creature Emoji" src="myimages/emoji/research/video-game.png">
+  </div>
+
+  <div class="emojiReseachText">
+    <p><b>Line 2: var imgClicked = nounEvent.target;</b></p>
+    <p>This a variable that remembers where you clicked in in the text of the story so it knows where to place the emoji image.
+    </p>
+  </div>
+</div>
+
+<div class="emojiResearchBulletDiv">
+  <div class="emojiResearchDiv">
+    <img class="emojiResearch" alt="Video Game Creature Emoji" src="myimages/emoji/research/video-game.png">
+  </div>
+
+  <div class="emojiReseachText">
+    <p><b>Line 4:  var tableClicked = $(imgClicked).parents('table');</b></p>
+    <p>JASON HELP!!!!!
+    </p>
+  </div>
+</div>
+
+<div class="emojiResearchBulletDiv">
+  <div class="emojiResearchDiv">
+    <img class="emojiResearch" alt="Video Game Creature Emoji" src="myimages/emoji/research/video-game.png">
+  </div>
+
+  <div class="emojiReseachText">
+    <p><b>Line 6-14:  var clonedImg= document.createElement("img");</b></p>
+    <p>Create the new image that will be placed in the text of the story in that certain spot remebers in line 1 and with all of the attributes it should need: image, classes, the translationed text (i.e. pig emoji translates to the word &#34;piggy&#34;).</p>
+  </div>
+</div>
+
+<div class="emojiResearchBulletDiv">
+  <div class="emojiResearchDiv">
+    <img class="emojiResearch" alt="Video Game Creature Emoji" src="myimages/emoji/research/video-game.png">
+  </div>
+
+  <div class="emojiReseachText">
+    <p><b>Line 16: clickedNounEl.textContent = "";</b></p>
+    <p>Clears out the old content you had in that space, in this case the word &#34;noun&#34; that was underlined in the text.</p>
+  </div>
+</div>
+
+<div class="emojiResearchBulletDiv">
+  <div class="emojiResearchDiv">
+    <img class="emojiResearch" alt="Video Game Creature Emoji" src="myimages/emoji/research/video-game.png">
+  </div>
+
+  <div class="emojiReseachText">
+    <p><b>Line 18: clickedNounEl.appendChild(clonedImg);</b></p>
+    <p>You think that may be it right? What else s there to do? No. You actually have to tell the computer to append you new emoji image to the page. You could get all the way here and think you were done, but youy woud nver see it becasue you did not tell it to append to the page. </p>
+  </div>
+</div>
+
+<div class="emojiResearchBulletDiv">
+  <div class="emojiResearchDiv">
+    <img class="emojiResearch" alt="Video Game Creature Emoji" src="myimages/emoji/research/video-game.png">
+  </div>
+
+  <div class="emojiReseachText">
+    <p><b>Line 20: clearTable(tableClicked);</b></p>
+    <p>Oh, and one more thing. Now you have to tell the computer to remove that table of nouns not that tyou don&#39t need it anymore.  </p>
+  </div>
+</div>
+
+<div class="emojiResearchBulletDiv">
+  <div class="emojiResearchDiv">
+    <img class="emojiResearch" alt="Video Game Creature Emoji" src="myimages/emoji/research/video-game.png">
+  </div>
+
+  <div class="emojiReseachText">
+    <p><b>Phew. I am exhausted. And that was just one tiny piece of the code that makes up Emoji-Libs</b> </p>
+  </div>
+</div>
+
+
+<!-- <div class="thinkBigDiv">
+  <p class="thinkBigP phew">
+    <b>Phew. I am exhausted. And that was just one tiny piece of the code that makes up Emoji-Libs</b>
+  </p>
+</div> -->
+
 
 <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
 
 <img class="lessonsLearned" alt="Lessons Learned" src="myimages/emoji/synthesis/lessons.png">
 
 
-<div><p class="statement emojiBlue">Problem &amp Solution</p></div>
+<div class="swot">
+
+  <div class="topSwot">
+    <div class="strengthWeak swotRec webmdBlueBack">
+      <p class="swotTitle">Responsive Web</p>
+      <p>- Bootstrap is helpful with nav, footer, and scroll tables but its requires a lot of work on visuals</p>
+      <p>- Bootstrap&#39;s grid can help with layout, but often need to insert media queries to make things work </p>
+      <p>- Using percentages and global margins will help to make responsive easier</p>
+    </div>
+    <div class="strengthWeak  swotRec webmdBlueBack">
+      <p class="swotTitle">Weaknesses</p>
+      <p>- Perceived as having &#34;fluffy &#34; articles, no definitive answers or statistics</p>
+      <p>- Main revenue source, ads, deters customer retention</p>
+      <p>- TMI, too much information, users get lost</p>
+    </div>
+  </div>
+
+<div class="topSwot">
+  <div class="strengthWeak swotRec webmdBlueBack">
+    <p class="swotTitle">Strengths</p>
+    <p>- Strong SEO, always at the top of most of healthcare searches</p>
+    <p>- Easy to understand, uses layman&#39;s terms</p>
+    <p>- Allows people to advocate for themselves with their doctor</p>
+  </div>
+  <div class="strengthWeak  swotRec webmdBlueBack">
+    <p class="swotTitle">Weaknesses</p>
+    <p>- Perceived as having &#34;fluffy &#34; articles, no definitive answers or statistics</p>
+    <p>- Main revenue source, ads, deters customer retention</p>
+    <p>- TMI, too much information, users get lost</p>
+  </div>
+</div>
+
+  <div class="bottomSwot">
+    <div class="oppThreats  swotRec webmdBlueBack">
+      <p class="swotTitle">Opportunities</p>
+      <p>- API opportunities with health apps and wearable makers</p>
+      <p>- A WebMD device co-promoted with wearable maker could help to make WebMD a daily habit<p>
+      <p>- Could also market wearables on WebMD site</p>
+    </div>
+    <div class="oppThreats swotRec webmdBlueBack">
+      <p class="swotTitle">Threats</p>
+      <p>- Competitors sites (CDC, Mayo) are very well respected sources of healthcare information</p>
+      <p>- Healthcare start-ups are on the rise: 2,700 on AngelList alone and many more already public</p>
+      <p>- Fitness wearables continue to expand their data offerings</p>
+      </p>
+    </div>
+  </div>
+
+  <div class="bottomSwot">
+    <div class="oppThreats  swotRec webmdBlueBack">
+      <p class="swotTitle">Opportunities</p>
+      <p>- API opportunities with health apps and wearable makers</p>
+      <p>- A WebMD device co-promoted with wearable maker could help to make WebMD a daily habit<p>
+      <p>- Could also market wearables on WebMD site</p>
+    </div>
+    <div class="oppThreats swotRec webmdBlueBack">
+      <p class="swotTitle">Threats</p>
+      <p>- Competitors sites (CDC, Mayo) are very well respected sources of healthcare information</p>
+      <p>- Healthcare start-ups are on the rise: 2,700 on AngelList alone and many more already public</p>
+      <p>- Fitness wearables continue to expand their data offerings</p>
+      </p>
+    </div>
+  </div>
+</div>
+
+<div><p class="statement emojiBlue">The Problem &amp The Emoji-Libs Solution</p></div>
 
 <div class="introBoxes row">
   <div class="introBox col-xs-6">
@@ -459,31 +636,45 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 </div>
 
+<div class="processSectionTitle webmdDesign" id="designSection">Design</div>
+
 <div><p class="statement emojiPink">Why Code is Important to Designers</p></div>
 
 <div class="problem">
     <div class="bullet">
       <div class="decCircle emojiBlueBack"><p class="decNumber">1</p></div>
       <div class="problemText">
-        <p><b>Understand the effort</b><p>
+        <p><b>Understand the effort, why deadlines might be missed</b><p>
         <p class= "problemSubText">
-          You have a better understanding of what is easy in code and what take more effort
+          You have a better understanding of what is easier in code and what will likely take more effort
+        </p>
+        <p class= "problemSubText">
+           Understand that anything can happen, aka that mystifying 3 hours you lost to centering
         </p>
       </div>
     </div>
     <div class="bullet">
       <div class="decCircle emojiBlueBack"><p class="decNumber">2</p></div>
-      <div class= "problemText"><p><b>Understand why deadlines might be missed</b></p>
-      <p class= "problemSubText">The mystfying 3 hours you lost to centering </p>
+      <div class= "problemText"><p><b>Pitch in</b></p>
+      <p class= "problemSubText">In a start up environment especially it is important to be able to pitch in and do what you can to meet a deadline </p>
     <p class= "problemSubText"></p></div>
     </div>
 
     <div class="bullet">
       <div class="decCircle emojiBlueBack"><p class="decNumber">3</p></div>
-      <div class= "problemText"><p><b>Code can inspire/influence design</b></p>
-      <p class= "problemSubText">XXXXXXXXX</p>
+      <div class= "problemText"><p><b>Knowledge is power</b></p>
+      <p class= "problemSubText">Sometimes I feel like dealing with engineers is like dealing with a mechanic, "don't worry about what's under the hood little missy"</p>
+      <p class= "problemSubText">When designers know code they can take back some of that power</p>
     </div>
   </div>
+
+  <div class="bullet">
+    <div class="decCircle emojiBlueBack"><p class="decNumber">3</p></div>
+    <div class= "problemText"><p><b>Code can inspire/influence design</b></p>
+    <p class= "problemSubText">No matter how perfect the design nothing renders quite the same on Sketch/Illustrator as it does on the web page, especially considering responsive web and the hundreds of different sized devices</p>
+    <p class= "problemSubText">Sometimes a coding accident or a need to modify the content to fit the code will lead to a better, cleaner design </p>
+  </div>
+</div>
 
 </div>
 
@@ -578,17 +769,17 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div>
-    <button  type="button" onclick="location.href='../FEWD37/final-project/index.html';">Emoji-Libs</button>
+    <button  type="button" onclick="location.href='../FEWD37/final-project/index.html';">Emoji-Libs LIVE</button>
   </div>
 
 <!-- NEXT PORTFOLIO SECTION -->
-<div class="processSectionTitle processSectionTitleUpNextTier processSectionTitleUpNext">
-  <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6 ">Up Next</div>
+<div class="portArrowBottomSec processSectionTitle processSectionTitleUpNext processSectionTitleUpNextWeb">
+  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">Up Next</div>
   <!-- col-sm-5 -->
-  <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
+  <div class="col-xs-12 col-md-offset-1 col-sm-5 col-md-offset-4 col-md-2 col-lg-offset-4 col-lg-2">
     <!-- col-sm-offset-1 col-sm-6  -->
-    <a href="webmd.html">
-      <p class="nextPort nextPortTier arrowAndText">WebMD Mobile App with Companion Wearable</p>
+    <a class="nextportRight" href="tier5.html">
+      <p class="nextPort arrowAndText ">Tier 5</p>
       <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
     </a>
   </div>
