Add in lessons learned

--- a/emoji-libs-port-temp.html
+++ b/emoji-libs-port-temp.html
@@ -556,66 +556,67 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 <div class="swot">
 
   <div class="topSwot">
-    <div class="strengthWeak swotRec webmdBlueBack">
+    <div class="strengthWeak swotRec">
       <p class="swotTitle">Responsive Web</p>
       <p>- Bootstrap is helpful with nav, footer, and scroll tables but its requires a lot of work on visuals</p>
-      <p>- Bootstrap&#39;s grid can help with layout, but often need to insert media queries to make things work </p>
+      <p>- <b>Bootstrap&#39;s grid can help</b> with layout, but <b>often need to insert media queries to make things work</b> </p>
       <p>- Using percentages and global margins will help to make responsive easier</p>
     </div>
-    <div class="strengthWeak  swotRec webmdBlueBack">
-      <p class="swotTitle">Weaknesses</p>
-      <p>- Perceived as having &#34;fluffy &#34; articles, no definitive answers or statistics</p>
-      <p>- Main revenue source, ads, deters customer retention</p>
-      <p>- TMI, too much information, users get lost</p>
+    <div class="strengthWeak  swotRec">
+      <p class="swotTitle">Break Things</p>
+      <p>- <b>People often do not want to change their code for fear of breaking it</b>, especially when Java Script brings your whole page to a screeching halt.</p>
+      <p>- <b>But the only way to learn is to change things</b>, break things, and then learn to fix them. (Making commits on GitHub so you can “undo” is a great practice too.) </p>
     </div>
   </div>
 
 <div class="topSwot">
-  <div class="strengthWeak swotRec webmdBlueBack">
-    <p class="swotTitle">Strengths</p>
-    <p>- Strong SEO, always at the top of most of healthcare searches</p>
-    <p>- Easy to understand, uses layman&#39;s terms</p>
-    <p>- Allows people to advocate for themselves with their doctor</p>
+  <div class="strengthWeak swotRec">
+    <p class="swotTitle">Code is Creative</p>
+    <p>- Many people think that code is just about being a “monkey,” rote implementation of someone else’s creativity.</p>
+    <p>For this project I was in a unique position: wrote content, designed, and coded. And <b>I found that code was very creative and even inspired better design.</b> </p>
   </div>
-  <div class="strengthWeak  swotRec webmdBlueBack">
-    <p class="swotTitle">Weaknesses</p>
-    <p>- Perceived as having &#34;fluffy &#34; articles, no definitive answers or statistics</p>
-    <p>- Main revenue source, ads, deters customer retention</p>
-    <p>- TMI, too much information, users get lost</p>
+
+  <div class="strengthWeak  swotRec">
+    <p class="swotTitle">MVP is Good</p>
+    <p>- <b>Focus on completing a MVP first,</b> get it done</p>
+    <p>- <b>You may find that the lean UX implied by MVP also may also result in better, crisper design</b></p>
   </div>
 </div>
 
+
   <div class="bottomSwot">
-    <div class="oppThreats  swotRec webmdBlueBack">
-      <p class="swotTitle">Opportunities</p>
-      <p>- API opportunities with health apps and wearable makers</p>
-      <p>- A WebMD device co-promoted with wearable maker could help to make WebMD a daily habit<p>
-      <p>- Could also market wearables on WebMD site</p>
+    <div class="oppThreats  swotRec">
+      <p class="swotTitle">Make it Work Before you Make it Pretty</p>
+      <p>- This phrase should probably be tattooed on the arm of any web developer or designer.</p>
+      <p>- While also true for design, in code its especially true as <b>the penalty for making it “pretty” too soon can be devastating, many hours of wasted time that might completely be lost.</b><p>
     </div>
-    <div class="oppThreats swotRec webmdBlueBack">
-      <p class="swotTitle">Threats</p>
-      <p>- Competitors sites (CDC, Mayo) are very well respected sources of healthcare information</p>
-      <p>- Healthcare start-ups are on the rise: 2,700 on AngelList alone and many more already public</p>
-      <p>- Fitness wearables continue to expand their data offerings</p>
+    <div class="oppThreats swotRec">
+      <p class="swotTitle">Always do the process</p>
+      <p>- This project was for a front-end web development class. I didn’t need to look at the strategic implications of this project, sketch designs, create digital wireframes, user test - any of that.  </p>
+      <p>- But <b>for me, doing the design process is necessary for any kind of decision making.</b>
+      </p>
+    </div>
+  </div>
+  <div class="bottomSwot">
+    <div class="oppThreats  swotRec swotRecLong">
+      <p class="swotTitle">Timing is tough</p>
+      <p>- How long will that take? I can just see asking this questions as a designer/portfolio manager. And now I know the answer may not be that easy. I have learn a lot about what is hard and what is easy to do in code, but even seasoned developers are hit with unexpected issues that can drastically effect time to completion some that happened to me are:</p>
+      <p>+ The “easy CSS” problem that took 3 hours to fix.<p>
+      <p>+ The problem I didn’t know I had. Hey why is your website look like X, Y, Z on my Android…</p>
+      <p>+ I am just going to finish one more thing… is it 4am?</p>
+    </div>
+
+    <div class="oppThreats swotRec swotRecLong">
+      <p class="swotTitle">Scope Creep</p>
+      <p>- <b>Scope creep is one of the toughest things to manage in code.</b></p>
+      <p>- I just need to do one more thing…</p>
+      <p>- Wouldn't it be cool if…</p>
+      <p>- STOP! Define the scope and stick to it. Don’t let a small project become the Taj Mahal.</p>
+      <p>- What helps me is to <b>fall back on the concept of MVP.</b> What is the minimum I need to do to get this out? The rest goes on your Trello to do list. And it will be a long list.</p>
       </p>
     </div>
   </div>
 
-  <div class="bottomSwot">
-    <div class="oppThreats  swotRec webmdBlueBack">
-      <p class="swotTitle">Opportunities</p>
-      <p>- API opportunities with health apps and wearable makers</p>
-      <p>- A WebMD device co-promoted with wearable maker could help to make WebMD a daily habit<p>
-      <p>- Could also market wearables on WebMD site</p>
-    </div>
-    <div class="oppThreats swotRec webmdBlueBack">
-      <p class="swotTitle">Threats</p>
-      <p>- Competitors sites (CDC, Mayo) are very well respected sources of healthcare information</p>
-      <p>- Healthcare start-ups are on the rise: 2,700 on AngelList alone and many more already public</p>
-      <p>- Fitness wearables continue to expand their data offerings</p>
-      </p>
-    </div>
-  </div>
 </div>
 
 <div><p class="statement emojiBlue">The Problem &amp The Emoji-Libs Solution</p></div>
