--- a/emoji-libs-port-temp.html
+++ b/emoji-libs-port-temp.html
@@ -189,7 +189,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
             </p>
             <p class= "emojiSubText">- Liked the idea of the idiom translator
             </p>
-            <p class= "emojiSubText">- Thought most if my ideas were viable
+            <p class= "emojiSubText">- Thought most of my ideas were viable
             </p>
             <p class= "emojiSubText">- But just couldn &#39;t get away from the idea of the Emoji site
             </p>
@@ -199,6 +199,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
           </div>
         </div>
 
+        <div class="bullet">
           <div class="emojiIdeaDiv">
             <img class="emojiIdeaImgComp" alt="Two Crossed Light Sabers" src="myimages/emoji/strategy/comp.png">
           </div>
